--- a/index.html
+++ b/index.html
@@ -1457,14 +1457,15 @@
           <div class="row align-items-center">
             <div class="col-md-6">
               <div class="earlyAccess_black">
-                <div> <img src="assets/images/circle_green.png" class="ern_img"></div>
+                <div class="mr-2"> <img src="assets/images/circle_green.png" class="ern_img"></div>
                 <div> Start earning daily interests with as little as $100!</div>
               </div>
             </div>
             <div class="col-md-6">
               <div class="earlyAccess_black">
-                <img src="assets/images/circle_green.png" class="ern_img">
-                Exit anytime and transfer/liquidate your assets easily.
+                <div class="mr-2"> <img src="assets/images/circle_green.png" class="ern_img"></div>
+                <div> Exit anytime and transfer/liquidate your assets easily.</div>
+               
               </div>
             </div>
           </div>
