responsive issue fix

--- a/index.html
+++ b/index.html
@@ -513,7 +513,7 @@ We are building an all-in-one mobile app for all your DeFi needs.
         </div>
         <div class="learn_section" style="margin: auto 0;">
           <form>
-            <div class="col-lg-10 mb-3">
+            <div class="col-lg-10 col-sm-12 mb-3">
               <div class="input-group mycustom">
                 <input
                   type="text"
@@ -1085,7 +1085,7 @@ We are building an all-in-one mobile app for all your DeFi needs.
           <span style="color: black">to lay your worries at rest </span>
         </div>
         <div class="flx_cnt">
-          <div class="wdt_50">
+          <div class="wdt_50 wdt_res90">
             <div>
               <div class="list_header fnt_blck mb-4">
                 Our expert team of analysts keep <br> analyzing over 500 assets to <br> bring you only the best!
@@ -1142,7 +1142,7 @@ We are building an all-in-one mobile app for all your DeFi needs.
               </div>
             </div>
           </div>
-          <div class="wdt_50">
+          <div class="wdt_50 wdt_res">
             <div>
               <img
                 src="assets/images/research.png"
@@ -1171,7 +1171,7 @@ We are building an all-in-one mobile app for all your DeFi needs.
           <span style="color: black">Compliant</span>>
         </div>
         <div class="flx_cnt mb-5">
-          <div class="wdt_50">
+          <div class="wdt_50 wdt_res80">
             <div>
               <div
                 class="list_header fnt_blck mb-1"
@@ -1337,12 +1337,12 @@ We are building an all-in-one mobile app for all your DeFi needs.
               <div class="earlyaccess_subHeader">
                 Can't wait to<br> participate in  DeFi<br> earnings?
               </div>
-              <div class="mt-4">
+              <div class="mt-4 mb_15_res">
                 Signup for our beta to get early access and exclusive rewards.
               </div>
             </div>
             <div class="col-lg-6 col-md-12 col-sm-12">
-              <div class="text_md_center">
+              <div>
                 <form>
                   <div class="form-group">
                     <label for="exampleInputEmail1">Email ID</label>
