--- a/index.html
+++ b/index.html
@@ -220,8 +220,10 @@
             aria-label="Toggle navigation"
             data-animation="fadeInDown"
             data-animation-delay="1.1s"
+            style="background: transparent;"
           >
-            <span class="ion-android-menu"></span>
+          <img src="assets/images/top_menu_icon.png">
+            <!-- <span class="ion-android-menu"></span> -->
           </button>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav m-auto">
@@ -231,7 +233,7 @@
                 data-animation-delay="1.1s"
               ></li>
             </ul>
-            <ul class="navbar-nav nav_btn align-items-center txt_wht">
+            <ul class="navbar-nav nav_btn align-items-center txt_wht mt_20">
               <li
                 class="animation"
                 data-animation="fadeInDown"
@@ -395,7 +397,7 @@
     <!-- START SECTION SERVICES -->
     <section id="investment" class="small_pt">
       <div class="custom-container">
-        <div class="section_subheader text-center mb-4">
+        <div class="section_subheader text-center mb-4 hrd_section_res">
           Your gateway to DeFi earnings
         </div>
         <div class="text-center mb-5 txt_wht text-md-60">
@@ -512,7 +514,7 @@ We are building an all-in-one mobile app for all your DeFi needs.
           </div>
         </div>
         <div class="learn_section" style="margin: auto 0;">
-          <form>
+          <form class="mb_80_res">
             <div class="col-lg-10 col-sm-12 mb-3">
               <div class="input-group mycustom">
                 <input
@@ -1381,7 +1383,7 @@ We are building an all-in-one mobile app for all your DeFi needs.
             </div>
           </div>
           <div class="row align-items-center mt-5">
-            <div class="col-md-6">
+            <div class="col-md-6 mb_20_res">
               <div class="earlyAccess_black">
                 <div class="mr-2"> <img src="assets/images/circle_green.png" class="ern_img"></div>
                 <div class="txt_wht"> Start earning daily interests with as little as $100!</div>
@@ -1453,9 +1455,9 @@ We are building an all-in-one mobile app for all your DeFi needs.
                 </ul>
               </div>
             </div>
-            <div class="col-lg-3 col-md-12">
+            <div class="col-lg-3 col-md-12 mt_20_res">
               <div class="footer_logo mb-3">
-                <div style="display: flex; justify-content: space-around">
+                <div class="ftr_pos">
                   <div>
                     <img class="wdth_50" src="assets/images/insta.png" />
                   </div>
