--- a/index.html
+++ b/index.html
@@ -361,7 +361,7 @@
     <!-- START SECTION SERVICES -->
     <section id="investment" class="small_pt">
       <div class="custom-container">
-        <div class="section_subheader text-center mb-5">
+        <div class="section_subheader text-center mb-5 section_subheader_res">
           Simple Solution, Higher Returns
         </div>
         <div class="flex_cnt">
