add new content

--- a/index.html
+++ b/index.html
@@ -274,15 +274,16 @@
                 class="animation text-white"
                 data-animation="fadeInUp"
                 data-animation-delay="1.1s"
+                class="lol"
               >
                 <strong
-                  ><span class="gradient_txt">Earn 20% </span>return on<br />
-                  <span class="gradient_txt">your</span> stablecoins</strong
+                  ><span class="gradient_txt">Highest return </span>on your<br />
+                  <span class="gradient_txt">crypto</span> investments</strong
                 >
                 <!-- <strong>DeFi</strong> bridge for <br> traditional <strong>investors</strong> -->
               </h1>
               <div>
-                Built for crypto novices, make higher returns by <br> investing in DeFi, deal none of its complexities.
+                Built for crypto newbies. Invest in DeFi with a click <br> and make industry leading returns.
               </div>
               <div
                 class="btn_group pt-2 pb-3 mt-4"
@@ -311,7 +312,7 @@
         <div class="flex_cnt">
           <div class="stack_first">
             <div class="txt_wht">
-              USDT/USDC Pool
+              Tether (USDT)
             </div>
             <div class="stack_inner_txt mt-4 mb-5">
               Shield your investments from cryptocurrency market volatility
@@ -332,10 +333,9 @@
             </div>
           </div>
           <div class="stack_second">
-            <div>CAKE Pool</div>
+            <div>Terra (LUNA)</div>
             <div class="stack_inner_txt mt-4 mb-5">
-              Earn upto 50% APY by staking CAKE,
-              native token of DEX Pancakeswap               
+              Earn the highest staking rewards on LUNA             
             </div>
             <div class="mh_60">COMING SOON</div>
             <div  class="mt-4">
@@ -343,10 +343,10 @@
             </div>
           </div>
           <div class="stack_second">
-            <div>AXS Pool</div>
+            <div>Cardano (ADA)</div>
             <div class="stack_inner_txt mt-4 mb-5">
-              Earn upto 50% APY by staking AXS,
-              native token for popular decentralize game 
+              Earn the highest staking rewards 
+              on ADA
             </div>
             <div class="mh_60">COMING SOON</div>
             <div  class="mt-4">
@@ -502,7 +502,7 @@ We are building an all-in-one mobile app for all your DeFi needs.
         <div class="learn_section">
           <div class="header_txt  text_start mb-2">Learning DeFi?</div>
           <div class="txt_wht text_start mb-3">
-            Join our mailing list to get latest updates on the industry and how it works.
+            Join our mailing list to get latest updates on DeFi industry and how it works.
           </div>
           <div class="button_align">
             <div>
@@ -1168,7 +1168,7 @@ We are building an all-in-one mobile app for all your DeFi needs.
       style="background-color: white; padding-top: 0px !important"
     >
       <div class="custom-container-simple">
-        <div class="section_subheader text-center mb-5" style="padding: 100px 0px 0px;">
+        <div class="section_subheader text-center mb-4" style="padding: 30px 0px 0px;">
           <span class="gradient_txt">Globally </span>
           <span style="color: black">Compliant</span>>
         </div>
@@ -1337,7 +1337,7 @@ We are building an all-in-one mobile app for all your DeFi needs.
           <div class="row align-items-center">
             <div class="col-lg-6 col-md-12 col-sm-12 res_md_mt_30 res_sm_mt_20">
               <div class="earlyaccess_subHeader">
-                Can't wait to<br> participate in  DeFi<br> earnings?
+                Start your <br> DeFi Journey.
               </div>
               <div class="mt-4 mb_15_res">
                 Signup for our beta to get early access and exclusive rewards.
@@ -1386,13 +1386,13 @@ We are building an all-in-one mobile app for all your DeFi needs.
             <div class="col-md-6 mb_20_res">
               <div class="earlyAccess_black">
                 <div class="mr-2"> <img src="assets/images/circle_green.png" class="ern_img"></div>
-                <div class="txt_wht"> Start earning daily interests with as little as $100!</div>
+                <div class="txt_wht">Start earning daily interests with as little as $100!</div>
               </div>
             </div>
             <div class="col-md-6">
               <div class="earlyAccess_black">
                 <div class="mr-2"> <img src="assets/images/circle_green.png" class="ern_img"></div>
-                <div class="txt_wht"> Exit anytime and transfer/liquidate your assets easily.</div>
+                <div class="txt_wht">Exit anytime and liquidate your assets easily.</div>
                
               </div>
             </div>
@@ -1430,7 +1430,7 @@ We are building an all-in-one mobile app for all your DeFi needs.
               </h4>
               <ul class="footer_link list_arrow">
                 <li>
-                  <a href="#">support@rivera.money</a>
+                  <a href="#">contact@rivera.money</a>
                 </li>
                 <li>
                   <!-- <a href="#">+91 12345 12345</a> -->
