--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
       content="Cryptocash is Professional Creative Template"
     /> -->
     <!-- SITE TITLE -->
-    <title>Rivera | Get started with Crypto Earning</title>
+    <title>Rivera</title>
     <meta name="description"
-    content="Invest in DeFi market with a click and earn industry leading returns on your investment">
+    content="Invest in DeFi market with a click and earn industry leading returns on your crypto portfolio.">
     <!-- Favicon Icon -->
     <!-- <link
       rel="shortcut icon"
@@ -292,7 +292,7 @@
                 <!-- <strong>DeFi</strong> bridge for <br> traditional <strong>investors</strong> -->
               </h1>
               <div>
-                Invest in DeFi market with a click and earn industry <br> leading returns on your investment. 
+                Invest in DeFi market with a click and earn industry <br> leading returns on your crypto portfolio. 
               </div>
               <div
                 class="btn_group pt-2 pb-3 mt-4"
@@ -338,7 +338,7 @@
              
             </div>
             <div class="mt-4">
-              <button class="btn transparent_btn stck_btn">Stake Now</button>
+              <button class="btn transparent_btn stck_btn">Get Access</button>
             </div>
           </div>
           <div class="stack_second">
@@ -348,18 +348,18 @@
             </div>
             <div class="mh_60">COMING SOON</div>
             <div  class="mt-4">
-              <button class="btn transparent_btn stck_btn" disabled>Stake Now</button>
+              <button class="btn transparent_btn stck_btn" disabled>Get Access</button>
             </div>
           </div>
           <div class="stack_second">
-            <div>Cardano (ADA)</div>
+            <div>Pancake Swap (CAKE)</div>
             <div class="stack_inner_txt mt-4 mb-5">
               Earn the highest staking rewards 
-              on ADA
+              on CAKE
             </div>
             <div class="mh_60">COMING SOON</div>
             <div  class="mt-4">
-              <button class="btn transparent_btn stck_btn" disabled>Stake Now</button>
+              <button class="btn transparent_btn stck_btn" disabled>Get Access</button>
             </div>
           </div>
         </div>
@@ -409,7 +409,7 @@
         <div class="section_subheader text-center mb-4 hrd_section_res">
           Your gateway to DeFi earnings
         </div>
-        <div class="text-center mb-5 txt_wht text-md-60">
+        <div class="text-center mb-5 txt_wht text-md-80">
           DeFi investors can directly participate in governing the new generaton financial applications, replacing legacy intermediaries & earning higher returns. However, the current approach to enter DeFi is technically complex and not so user friendly. 
 We are building an all-in-one mobile app for all your DeFi needs.
         </div>
@@ -511,7 +511,7 @@ We are building an all-in-one mobile app for all your DeFi needs.
         <div class="learn_section">
           <div class="header_txt  text_start mb-2">Learning DeFi?</div>
           <div class="txt_wht text_start mb-3">
-            Join our mailing list to get latest updates on DeFi industry and how it works.
+            Join our mailing list to get latest updates on DeFi<br> industry and how it works.
           </div>
           <div class="button_align">
             <!-- <div>
@@ -1682,7 +1682,7 @@ aria-hidden="true">
               {
                 var keyCode = (e.which) ? e.which : e.keyCode;
 
-                if (keyCode > 31 && (keyCode < 48 || keyCode > 57))
+                if (keyCode != 43 && keyCode > 31 && (keyCode < 48 || keyCode > 57))
                   {
                    // alert("You can enter only numbers 0 to 9 ");
                     return false;
