haeder text update

--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
               <a target="blank"
               href="https://medium.com/rivera-money"
              class="anchar_hvr"
-              >Blogs</a>    
+              >Blog</a>    
               
               <img src="assets/images/Blog.png" style="width: 14px;">
               </li>
