--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@
           </div>
           <div class="col-lg-5 col-md-12 col-sm-12 order-first">
             <div style="width: 100%;margin-left: 15px;">
-              <img src="assets/images/hero_side.png" style="width: 100%;">
+              <img src="assets/images/hero_side2.png" style="width: 100%;">
             </div>
           </div>
         </div>
