--- a/homeDemo.html
+++ b/homeDemo.html
@@ -203,7 +203,7 @@
     <!-- END LOADER -->
 
     <!-- START HEADER -->
-    <header class="header_wrap fixed-top">
+    <header class="header_wrap fixed-top nav-fixed">
       <div class="custom-container">
         <nav class="navbar navbar-expand-lg">
           <a
@@ -237,7 +237,7 @@
                 data-animation-delay="1.1s"
               ></li>
             </ul>
-            <ul class="navbar-nav nav_btn align-items-center txt_wht mt_20">
+            <ul class="navbar-nav nav_btn align-items-center txt_wht mt_5">
               <li
                 class="animation"
                 data-animation="fadeInDown"
@@ -279,27 +279,21 @@
     <section class="mobile_vault_hero luxury_goods_bg">
       <div class="container">
           <div class="row">
-              <div class="col-lg-7 col-md-8 mobile_vault_hero-content">
+              <div class="col-lg-7 col-md-8 mobile_vault_hero-content text-center" style="margin:auto">
                   <!-- <h1 class="mobile_vault_hero-title text-white">
                       Secure, Convenient and <br class="mob_hidden"> Private Vault for all <span>Valuables</span>
                   </h1> -->
                   <h1 class="industies_hero-title text-white text-extraBold mb-3">
-                      Digitally revolutionising the luxury goods market
+                    Simplifying Cross-chain Yield Generation
                   </h1>
-                  <p class="mobile_vault_hero-para px-0 col-md-9 text-white">
-                      Cutting edge, technologically advanced business solutions meticulously designed for the luxury
-                      goods industry
+                  <p class="mobile_vault_hero-para px-0 text-white">
+                    A mobile-first marketplace of pre-vetted DeFi protocols and risk-assessed yield strategies aggregated in one place. With built-in fiat ramp and asset swap, Rivera is your one stop solution for DeFi investment.
                   </p>
-                  <a class="icon_link mb-3 text-white pointer" class="icon_link mb-3">
-                      <span class="icon_link-icon">
-                          <img src="./img/icons/btn-icon.svg" class="img-fluid" alt="">
-                      </span>
-                      <span class="icon_link-content">Schedule Demo</span>
-                  </a>
-                  <a class="pointer" id="myImg">
-                      <img src="/img/Home/play_circle.png" style="width: 38px;">
-                      <span  class="hw_bg text-white">Explainer video</span>
-                  </a>
+                  <div class="btn_group pt-3 pb-3">
+                    <button type="submit" name="submit2" id="submit2"  class="btn btn-default btn-radius nav-link content-popup">
+                      Get Early Access
+                    </button>
+                  </div>
               </div>
           </div>
       </div>
@@ -309,26 +303,29 @@
     <!-- START SECTION SERVICES -->
     <section id="investment" class="small_pt">
       <div class="custom-container">
+        <div class="section_subheader text-center section_subheader_res mt_100 mb_150">
+          Investors friendly experience
+          </div>
        <div class="gateWay_flex">
          <div class="gateWay_flex_inner">
              <div>
-              <div class="gateWay_flex_inner_header">Mobile gateway to DeFi</div>
-              <div>SimplDeFi is being built with a vision to make DeFi investment accessible to all. DeFi is growing, and it is growing fast.</div>
+              <div class="gateWay_flex_inner_header_18">Mobile Gateway to DeFi Investment</div>
+              <div class="line_height_25">Explore top crypto assets and find the best DeFi opportunities aggregated through one easy-to-use interface</div>
              </div>
-             <div>
-              <div class="gateWay_flex_inner_header">Mobile gateway to DeFi</div>
-              <div>SimplDeFi is being built with a vision to make DeFi investment accessible to all. DeFi is growing, and it is growing fast.</div>
+             <div class="mt_80">
+              <div class="gateWay_flex_inner_header_18">Educated & Risk Assesed Positions </div>
+              <div class="line_height_25">With an in-app guide, take educated yield-farming decisions with facts and strategy mechanics explained.</div>
              </div>
          </div>
          <div class="gateWay_flex_inner"><img src="assets/images/mobile_gateway.png"></div>
          <div class="gateWay_flex_inner">
           <div>
-            <div class="gateWay_flex_inner_header">Mobile gateway to DeFi</div>
-            <div>SimplDeFi is being built with a vision to make DeFi investment accessible to all. DeFi is growing, and it is growing fast.</div>
+            <div class="gateWay_flex_inner_header_18">Marketplace for advance strategies</div>
+            <div class="line_height_25">A marketplace for advanced algorithms operating cross-chain to unleash the true potential of yield farming.</div>
            </div>
-           <div>
-            <div class="gateWay_flex_inner_header">Mobile gateway to DeFi</div>
-            <div>SimplDeFi is being built with a vision to make DeFi investment accessible to all. DeFi is growing, and it is growing fast.</div>
+           <div class="mt_80">
+            <div class="gateWay_flex_inner_header_18">Your funds always in your control </div>
+            <div class="line_height_25">Keep full custody of your cryptos even when generating yield; censorship-resistant and free of custodian mishaps.</div>
            </div>
         </div>
        </div>
@@ -355,14 +352,14 @@
             <div>
               <div class="list_inner">
                 <div>
-                  <div class="section_subheader mb-2">CBP Coming Soon</div>
+                  <div class="section_subheader mb-2">Earn up to 21% on stablecoins</div>
                   <div class="mb-4">
-                    SimplDeFi is being built with a vision to make DeFi investment accessible to all. DeFi is growing, and it is growing fast.
+                    Maximize your return on stablecoins with advanced yield strategies. Withdraw anytime to your bank account.
                   </div>
                   <div class="button_align">
                 
                     <div>
-                      <button class="btn transparent_btn" onclick="visitBlog()">Visit Blog</button>
+                      <button class="btn transparent_btn" onclick="visitBlog()">Learn more</button>
                     </div>
                   </div>
                 </div>
@@ -394,12 +391,9 @@
               <div>
                 <div class="product_list_inner">
                   <div>
-                    <div class="mb-2 gradient_txt"><span class="section_subheader">RAFT</span><span class="list_header ml-3">Rivera Wallet and Strategy Marketplace​</span></div>
+                    <div class="mb-2 gradient_txt"><span class="section_subheader">RAFT</span><span class="list_header ml-3">Crypto Wallet and Yield Protocols Marketplace​​</span></div>
                     <div class="mb-2">
-                      An easy to use crypto wallet for users to browse top & trending crypto assets and learn more on them via friendly & transparent investor analysis reports.​
-                    </div>
-                    <div class="mb-4">
-                      Users can further explore audited DeFi protocols and investment strategies in the marketplace and execute complex cross-chain strategies to earn higher APY with nearly a click.
+                      An easy to use non-custodial crypto wallet to browse top & trending  crypto assets and invest in DeFi yield startegies as per your risk profile.​
                     </div>
                   </div>
                 </div>
@@ -420,12 +414,9 @@
             <div>
               <div class="product_list_inner">
                 <div>
-                  <div class="mb-2 gradient_txt"><span class="section_subheader">SAILOR</span><span class="list_header ml-3">Rivera Wallet and Strategy Marketplace​</span></div>
+                  <div class="mb-2 gradient_txt"><span class="section_subheader">SAILOR</span><span class="list_header ml-3">Rivera Native Investment Strategy Protocol​</span></div>
                   <div class="mb-2">
-                    An easy to use crypto wallet for users to browse top & trending crypto assets and learn more on them via friendly & transparent investor analysis reports.​
-                  </div>
-                  <div class="mb-4">
-                    Users can further explore audited DeFi protocols and investment strategies in the marketplace and execute complex cross-chain strategies to earn higher APY with nearly a click.
+                    Earn industry-leading APY on your crypto holdings with our risk-assessed native investment protocol built with combinations of DeFi yield strategies.
                   </div>
                 </div>
               </div>
@@ -446,12 +437,9 @@
           <div>
             <div class="product_list_inner">
               <div>
-                <div class="mb-2 gradient_txt"><span class="section_subheader">EDGE </span><span class="list_header ml-3">Rivera Wallet and Strategy Marketplace​</span></div>
+                <div class="mb-2 gradient_txt"><span class="section_subheader">EDGE </span><span class="list_header ml-3">Cross Chain Strategy Development Infrastructure</span></div>
                 <div class="mb-2">
-                  An easy to use crypto wallet for users to browse top & trending crypto assets and learn more on them via friendly & transparent investor analysis reports.​
-                </div>
-                <div class="mb-4">
-                  Users can further explore audited DeFi protocols and investment strategies in the marketplace and execute complex cross-chain strategies to earn higher APY with nearly a click.
+                  SDK and UI toolkit for fund managers to build cross-chain investment flows for listed crypto assets leveraging Rivera approved DeFi protocols.
                 </div>
               </div>
             </div>
@@ -1554,6 +1542,19 @@ aria-hidden="true">
         center: false,
       });
     </script> -->
+
+    <script>
+         $(window).on('scroll', function() {
+        var scroll = $(window).scrollTop();
+
+        if (scroll >= 80) {
+            $('header').addClass('nav-fixed');
+        } else {
+            $('header').addClass('nav-fixed');
+        }
+
+    });
+    </script>
 
     <script type="text/javascript">
       var parallax_offset = document.getElementById("parallax_offset");
