--- a/homeDemo.html
+++ b/homeDemo.html
@@ -284,10 +284,10 @@
                       Secure, Convenient and <br class="mob_hidden"> Private Vault for all <span>Valuables</span>
                   </h1> -->
                   <h1 class="industies_hero-title text-white text-extraBold mb-3">
-                    Simplifying Cross-chain Yield Generation
+                    Simplifying Cross-chain <br> Yield Generation
                   </h1>
                   <p class="mobile_vault_hero-para px-0 text-white">
-                    A mobile-first marketplace of pre-vetted DeFi protocols and risk-assessed yield strategies aggregated in one place. With built-in fiat ramp and asset swap, Rivera is your one stop solution for DeFi investment.
+                    A mobile-first marketplace of pre-vetted DeFi protocols and risk-assessed yield strategies aggregated in one place.
                   </p>
                   <div class="btn_group pt-3 pb-3">
                     <button type="submit" name="submit2" id="submit2"  class="btn btn-default btn-radius nav-link content-popup">
