--- a/homeDemo.html
+++ b/homeDemo.html
@@ -439,7 +439,7 @@
             <div class="product_list_inner">
               <div>
                 <div class="mb-2 gradient_txt"><span class="section_subheader">EDGE </span><span class="list_header ml-3">Cross Chain Strategy Development Infrastructure</span></div>
-                <div class="mb-2">
+                <div class="mb-2" style="width:96%">
                   SDK and UI toolkit for fund managers to build cross-chain investment flows for listed crypto assets leveraging Rivera approved DeFi protocols.
                 </div>
               </div>
