--- a/homeDemo.html
+++ b/homeDemo.html
@@ -291,7 +291,7 @@
                     A marketplace for vetted DeFi protocols and risk-assessed yield strategies aggregated in secure and intutive crypto wallet.
                   </p>
                   <div class="btn_group pt-3 pb-3">
-                    <button type="submit" name="submit2" id="submit2"  class="btn btn-default btn-radius nav-link content-popup">
+                    <button type="submit" name="submit2" id="submit2"  class="btn btn-default btn-radius nav-link content-popup" onclick="window.location.href='#earlyAccess';">
                       Get Early Access
                     </button>
                   </div>
@@ -439,7 +439,7 @@
             <div class="product_list_inner">
               <div>
                 <div class="mb-2 gradient_txt"><span class="section_subheader">EDGE </span><span class="list_header ml-3">Cross Chain Strategy Development Infrastructure</span></div>
-                <div class="mb-2" style="width:96%">
+                <div class="mb-2">
                   SDK and UI toolkit for fund managers to build cross-chain investment flows for listed crypto assets leveraging Rivera approved DeFi protocols.
                 </div>
               </div>
@@ -1317,7 +1317,7 @@ We are building an all-in-one mobile app for all your DeFi needs.
           <div class="row align-items-center">
             <div class="col-lg-6 col-md-12 col-sm-12 res_md_mt_30 res_sm_mt_20">
               <div class="earlyaccess_subHeader">
-                Start your <br> DeFi Journey.
+                Community Building App <br> Launching Soon!
               </div>
               <div class="mt-4 mb_15_res">
                 Signup for our beta to get early access and exclusive rewards.
