responsive issue fix

--- a/homeDemo.html
+++ b/homeDemo.html
@@ -304,7 +304,7 @@
     <!-- START SECTION SERVICES -->
     <section id="investment">
       <div class="custom-container">
-        <div class="section_subheader text-center section_subheader_res mt_60 mb_80">
+        <div class="section_subheader text-center section_subheader_res mt_60 mb-5">
           Investors friendly experience
           </div>
        <div class="gateWay_flex">
@@ -329,6 +329,32 @@
             <div class="line_height_25">Keep full custody of your cryptos even when generating yield; censorship-resistant and free of custodian mishaps.</div>
            </div>
         </div>
+       </div>
+       <div class="gateWay_flex_mobile">
+          <div class="gateWay_flex_mobile_inner mb-5">
+            <div class="mb-3"><img src="assets/images/mbl_sec_sample.webp" class="wdt_90"></div>
+            <div class="list_header mb-2">Mobile Gateway to DeFi Investment​</div>
+            <div>Explore top crypto assets and find the best DeFi opportunities aggregated through one easy-to-use interface.
+            </div>
+          </div>
+          <div class="gateWay_flex_mobile_inner mb-5">
+            <div class="mb-3"><img src="assets/images/mbl_sec_sample.webp" class="wdt_90"></div>
+            <div class="list_header mb-2">Educated & Risk Assesed Positions​​</div>
+            <div>With an in-app guide, take educated yield-farming decisions with facts and strategy mechanics explained.
+            </div>
+          </div>
+          <div class="gateWay_flex_mobile_inner">
+            <div class="mb-3"><img src="assets/images/mbl_sec_sample.webp" class="wdt_90"></div>
+            <div class="list_header mb-2">Marketplace for advance strategies</div>
+            <div>A marketplace for advanced algorithms operating cross-chain to unleash the true potential of yield farming.
+            </div>
+          </div>
+          <div class="gateWay_flex_mobile_inner">
+            <div class="mb-3"><img src="assets/images/mbl_sec_sample.webp" class="wdt_90"></div>
+            <div class="list_header mb-2">Your funds always in your control</div>
+            <div>Keep full custody of your cryptos even when generating yield; censorship-resistant and free of custodian mishaps.
+            </div>
+          </div>
        </div>
       </div>
     </section>
@@ -384,9 +410,10 @@
     <!-- START SECTION SERVICES -->
     <section id="investment">
       <div class="custom-container">
-        <div class="section_subheader text-center section_subheader_res mb_100">
+        <div class="section_subheader text-center section_subheader_res mb-5">
           Simple Solution, Higher Returns
         </div>
+        <div class="slnc_mobile">
           <div class="row align-items-center product_listing_backgrnd mb_100">
             <div class="col-lg-7 col-md-12 col-sm-12 res_md_mt_30 res_sm_mt_20">
               <div>
@@ -454,8 +481,32 @@
             />
           </div>
         </div>
-   
     </div>
+  </div>
+    <div class="gateWay_flex_mobile">
+      <div class="gateWay_flex_mobile_inner mb-5">
+        <div class="mb-3 sl_img_pddng"><img src="assets/images/product_back_mobile.webp"></div>
+        <div class="list_header mb-1">RAFT</div>
+        <div class="list_header mb-2">Crypto Wallet and Yield Strategy Marketplace​</div>
+        <div>An intutive crypto wallet with marketplace for vetted DeFi protocols & yield strategies.​ Secure non-custodial wallet with biometric activated auto-recovery.
+        </div>
+      </div>
+      <div class="gateWay_flex_mobile_inner mb-5">
+        <div class="mb-3 sl_img_pddng"><img src="assets/images/product_back_mobile.webp"></div>
+        <div class="list_header mb-1">SAILOR</div>
+        <div class="list_header mb-2">Rivera Native Investment Strategy Protocol​​</div>
+        <div>Earn industry-leading APY on your crypto holdings with our risk-assessed native investment protocol built with combinations of DeFi yield strategies.
+        </div>
+      </div>
+      <div class="gateWay_flex_mobile_inner">
+        <div class="mb-3 sl_img_pddng"><img src="assets/images/product_back_mobile.webp"></div>
+        <div class="list_header mb-1">EDGE</div>
+        <div class="list_header mb-2">Cross Chain Strategy Development Infrastructure</div>
+        <div>SDK and UI toolkit for fund managers to build cross-chain investment flows for listed crypto assets leveraging Rivera approved DeFi protocols.
+        </div>
+      </div>
+   </div>
+
       </div>
     </section>
     <!-- END SECTION SERVICES -->
