--- a/homeDemo.html
+++ b/homeDemo.html
@@ -304,7 +304,7 @@
     <!-- START SECTION SERVICES -->
     <section id="investment">
       <div class="custom-container">
-        <div class="section_subheader text-center section_subheader_res mt_60 mb-5">
+        <div class="section_subheader text-center section_subheader_res mt_60 mb_80">
           Investors friendly experience
           </div>
        <div class="gateWay_flex">
@@ -410,7 +410,7 @@
     <!-- START SECTION SERVICES -->
     <section id="investment">
       <div class="custom-container">
-        <div class="section_subheader text-center section_subheader_res mb-5">
+        <div class="section_subheader text-center section_subheader_res mb_100">
           Simple Solution, Higher Returns
         </div>
         <div class="slnc_mobile">
